<resources>
    <string name="app_name">AppAuthenticator</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--MENSAGENS DE ERRO LOGIN-->
    <string name="invalid_credential">Senha ou Email incorretos.</string>
    <string name="invalid_email">Email inválido.</string>
    <string name="password_weak">Senha muito fraca.</string>
    <string name="usr_not_found">Usuário não encontrado.</string>
    <string name="user_disabled">Usuário desabilitado.</string>
    <string name="too_many_requests">Muitas tentativas de login.</string>
    <string name="operation_not_allowed">Operação não permitida.</string>
    <string name="campos_vazios">Preencher todos os campos.</string>
    <string name="login_sucesso">Logado com sucesso.</string>
    <string name="network_request_failed">Erro de conexão, verifique sua internet.</string>

    <!--MENSAGENS DE ERRO CADASTRO-->
    <string name="cpf_cnpj_vazio">Campo CPF/CNPJ não pode ser vazio.</string>
    <string name="nome_vazio">Campo nome não pode ser vazio.</string>
    <string name="email_vazio">Campo email não pode ser vazio.</string>
    <string name="senha_vazio">Campo senha não pode ser vazio.</string>
    <string name="telefone_vazio">Campo telefone não pode ser vazio.</string>
    <string name="birthday_empty">Data de nascimento não pode ser vazia.</string>
    <string name="email_invalido">Email inválido.</string>
    <string name="senha_fraca">Senha fraca.</string>
    <string name="email_em_uso">Email já cadastrado.</string>
    <string name="doc_invalido">Documento inválido.</string>
    <string name="cpf_invalido">CPF inválido.</string>
    <string name="cnpj_invalido">CNPJ inválido.</string>

    <string name="cadastro_sucesso">Cadastro realizado com sucesso.</string>

    <!-- Errors -->
    <string name="unknown_error">Erro desconhecido, tente novamnete mais tarde.</string>

    <!-- Connection Errors -->
    <string name="no_internet_found">Sem conexão a internet.</string>
    <string name="host_out_of_reach">Servidor fora do ar, entre em contato com o suporte.</string>

    <!-- Common HTTP errors -->
    <string name="http_400">Requisição inválida.</string>
    <string name="http_401">Email ou senha incorretos, tente novamente.</string>
    <string name="http_403">Acesso proibido. Você não tem permissão para acessar este recurso.</string>
    <string name="http_404">Serviço indisponível. Por favor, tente novamente mais tarde.</string>
    <string name="http_405">Método não permitido.</string>
    <string name="http_408">Tempo de requisição esgotado. Por favor, tente novamente mais tarde.</string>
    <string name="http_409">Usuário já cadastrado, por favor faça login.</string>
    <string name="http_500">Erro interno do servidor. Algo deu errado.</string>
    <string name="http_502">Bad Gateway. O servidor encontrou um problema ao processar a solicitação.</string>
    <string name="http_503">Serviço indisponível. Por favor, tente novamente mais tarde.</string>
    <string name="http_504">Tempo de resposta do servidor esgotado. Tente novamente mais tarde.</string>

    <!-- SOCIAL AUTH ERRORS -->
    <string name="generic_error_social_auth">Um erro ocorreu utilizando esse método de acesso, por favor tente novamente ou utilize outro método de acesso.</string>
    <string name="registered_but_not_with_this_social_method">Sua conta foi cadastrada por outro método de login, por favor o utilize para acessar.</string>

    <!-- Common HTTP sucess -->
    <string name="http_success_login_200">Login realizado com sucesso!</string>
    <string name="http_success_signup_201">Usuário cadastrado com sucesso!</string>
    <string name="http_success_logout_204">Você foi desconectado com sucesso.</string>
    <string name="http_success_profile_update_200">Perfil atualizado com sucesso.</string>
    <string name="http_success_password_change_200">Senha alterada com sucesso.</string>
    <string name="http_success_data_saved_200">Dados salvos com sucesso.</string>
    <string name="http_success_action_completed_200">Ação concluída com sucesso.</string>
    <string name="http_success_request_sent_202">Solicitação enviada com sucesso.</string>
    <string name="http_success_operation_200">Operação realizada com sucesso.</string>


    <!--Termos de uso-->
    <string name="clause_1">1. Aceitação dos Termos</string>
    <string name="clause_1_text">Ao baixar, instalar e usar este aplicativo, você concorda em
        cumprir e estar legalmente vinculado aos termos e condições aqui estabelecidos. Se você não
        concorda com estes termos, não deve usar o aplicativo.</string>

    <string name="clause_2">2. Uso Adequado</string>
    <string name="clause_2_text">Você concorda em usar o aplicativo apenas para fins legais e de
        acordo com os termos estabelecidos. Você não deve usar o aplicativo de qualquer maneira que
        possa causar danos ao aplicativo ou a terceiros, ou que possa interferir com a utilização
        normal do aplicativo por outros usuários.</string>

    <string name="clause_3">3. Conta do Usuário</string>
    <string name="clause_3_text">Para acessar certas funcionalidades do aplicativo, você pode ser
        solicitado a criar uma conta de usuário. Você concorda em fornecer informações verdadeiras,
        precisas e completas ao criar sua conta. Você é responsável por manter a confidencialidade
        das credenciais da sua conta e por todas as atividades que ocorram sob a sua conta.</string>

    <string name="clause_4">4. Privacidade</string>
    <string name="clause_4_text">Nós respeitamos sua privacidade e estamos comprometidos em proteger
        suas informações pessoais. A nossa Política de Privacidade descreve como coletamos, usamos e
        compartilhamossuas informações. Ao usar o aplicativo, você concorda com a coleta e o uso de
        informações de acordo com a nossa Política de Privacidade.</string>

    <string name="clause_5">5. Direitos de Propriedade Intelectual</string>
    <string name="clause_5_text">Todos os direitos de propriedade intelectual relacionados ao
        aplicativo e seu conteúdo são de nossa propriedade ou licenciados para nós. Você não deve
        copiar, modificar, distribuir, vender ou alugar qualquer parte do aplicativo ou do seu
        conteúdo sem nossa permissão explícita por escrito.</string>

    <string name="clause_6">6. Conteúdo Gerado pelo Usuário</string>
    <string name="clause_6_text">Você é responsável por qualquer conteúdo que enviar, postar ou
        compartilhar através do aplicativo. Ao enviar conteúdo, você garante que possui todos os
        direitos sobre o conteúdo e que não está infringindo os direitos de terceiros.</string>

    <string name="clause_7">7. Responsabilidade e Garantias</string>
    <string name="clause_7_text">O aplicativo é fornecido "como está", sem garantias de qualquer
        tipo, expressas ou implícitas. Não garantimos que o aplicativo estará disponível
        ininterruptamente ou isento de erros. Você usa o aplicativo por sua própria conta e risco.
    </string>

    <string name="clause_8">8. Limitação de Responsabilidade</string>
    <string name="clause_8_text">Na máxima extensão permitida pela lei, nós não seremos responsáveis
        por quaisquer danos indiretos, incidentais, consequenciais ou punitivos decorrentes do uso
        ou da incapacidade de usar o aplicativo.</string>

    <string name="clause_9">9. Alterações nos Termos</string>
    <string name="clause_9_text">Reservamo-nos o direito de modificar estes termos a qualquer
        momento. Quaisquer alterações serão publicadas no aplicativo e entrarão em vigor
        imediatamente após a publicação. O uso contínuo do aplicativo após a publicação das
        alterações constitui sua aceitação dos termos modificados.</string>

    <string name="clause_10">10. Contato</string>
    <string name="clause_10_text">Se você tiver dúvidas ou preocupações sobre estes termos, entre em
        contato conosco através do nosso suporte ao cliente.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>